--- a/css/custom/includes/_home.scss
+++ b/css/custom/includes/_home.scss
@@ -70,13 +70,14 @@
 
 #homeProductPreview {
 
-
 	svg {
 		display: block;
 	}
 
 	.container-fluid {
-		background-color: $secondaryDark;
+		margin-top: -1px;
+		background: rgb(119,200,174);
+		background: linear-gradient(180deg, rgba(119,200,174,1) 0%, rgba(101,167,152,1) 50%);
 
 		h2, p {
 			color: $white;
@@ -132,19 +133,20 @@
 		input[type="submit"] {
 			text-decoration: none;
 			color: $white !important;
-			border-radius: 7px;
+			border-radius: 35px;
 			background-color: $secondary;
 			padding: $gutter/2 $gutter;
 			box-shadow: $boxShadowBig;
 			transition: $transition;
+			max-width: 50%;
+			margin: 0px auto;
+			border: none !important;
 
 			&:hover {
 				background-color: $primaryDark;
-			}
-
-			&:hover {
 				text-decoration: none;
-			}	
+				border: none !important;
+			}
 		}
 
 	}
